# web_home_work_13_django

./: pyproject.toml
quotes_to_scrape/app_quotes/: forms.py  models.py  urls.py  views.py
quotes_to_scrape/app_quotes/migrations/: 0001_initial.py
quotes_to_scrape/app_quotes/templates/app_quotes/: add_author.html  add_quote.html  author.html  base.html  index.html  tag.html
quotes_to_scrape/quotes_to_scrape/: asgi.py  settings.py  urls.py  wsgi.py
quotes_to_scrape/users/: forms.py  urls.py  views.py
quotes_to_scrape/users/templates/users/: login.html  logout.html  password_reset_done.html  signup.html
